@@ -33,8 +33,8 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
+* [mms] Add ability to create a new filter rule from the contacts dropdown in the dynamic view.
 * [mms] More intelligent sizing of raw message parts opened in a popup window.
-
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
