@@ -2,6 +2,8 @@
 v6.2.0-git
 ----------
 
+[mms] Add ability to create a new filter rule from the contacts dropdown in the
+      dynamic view.
 [mms] More intelligent sizing of raw message parts opened in a popup window.
 [mms] Load sent-mail mailbox list on demand in dynamic view.
 [mms] Allow configurable access to remote accounts from within a session
